--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,15 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = "1.4.32"
+    ext {
+        kotlin_version = "1.5.21"
+        core_version = "1.6.0"
+        appcompat_version = "1.3.0"
+        material_version = "1.4.0"
+        constraint_layout_version = "2.0.4"
+        junit_version = "4.13.2"
+        junit_test_version = "1.1.3"
+        espresso_version = "3.4.0"
+    }
     repositories {
         google()
         jcenter()
